Update kitten pictures

--- a/3-html-kittens/battlecry/generators/kitten/templates/kitten-template.html
+++ b/3-html-kittens/battlecry/generators/kitten/templates/kitten-template.html
@@ -1,4 +1,4 @@
         <div class="kitten">
-            <img src="./images/kitten-@image.jpeg"/>
+            <img src="./images/kitten-@image.jpg"/>
             __Na Me__ kitten
         </div>
